fix: 收藏列表左侧 z-index

--- a/src/styles/options/compactControls.css
+++ b/src/styles/options/compactControls.css
@@ -1,67 +1,67 @@
 /* 播放器控件 */
 .bpx-player-control-bottom {
   padding: 0 20px !important;
+}
 
-  >* {
-    flex: initial !important;
-  }
+.bpx-player-control-bottom>* {
+  flex: initial !important;
+}
 
-  /* 控件区域 */
-  .bpx-player-control-bottom-left,
-  .bpx-player-control-bottom-right {
-    min-width: initial !important;
-    gap: 8px;
-  }
+/* 控件区域 */
+.bpx-player-control-bottom-left,
+.bpx-player-control-bottom-right {
+  min-width: initial !important;
+  gap: 8px;
+}
 
-  /* Bilibili Evolved 自定义控件区域 */
-  .bpx-player-control-bottom-left>.be-video-control-bar-extend {
-    gap: 8px;
-  }
+/* Bilibili Evolved 自定义控件区域 */
+.bpx-player-control-bottom-left>.be-video-control-bar-extend {
+  gap: 8px;
+}
 
-  /* 减少中间填充空间 */
-  .bpx-player-control-bottom-center {
-    flex: 1 !important;
-    padding: 0 20px !important;
-  }
+/* 减少中间填充空间 */
+.bpx-player-control-bottom-center {
+  flex: 1 !important;
+  padding: 0 20px !important;
+}
 
-  /* 防止选集/倍速按钮错位 */
-  .bpx-player-control-bottom-right>.bpx-player-ctrl-btn:hover {
-    padding: 0;
-  }
+/* 防止选集/倍速按钮错位 */
+.bpx-player-control-bottom-right>.bpx-player-ctrl-btn:hover {
+  padding: 0;
+}
 
-  /* 所有按钮控件 */
-  .bpx-player-ctrl-btn {
-    margin: 0 !important;
-    width: fit-content !important;
-  }
+/* 所有按钮控件 */
+.bpx-player-ctrl-btn {
+  margin: 0 !important;
+  width: fit-content !important;
+}
 
-  .bpx-player-ctrl-time {
-    width: 130px !important;
-  }
+.bpx-player-ctrl-time {
+  width: 130px !important;
+}
 
-  /* 时间控件 */
-  .bpx-player-ctrl-time-seek {
-    width: 100% !important;
-    padding: 0 !important;
-    left: 0 !important;
-  }
+/* 时间控件 */
+.bpx-player-ctrl-time-seek {
+  width: 100% !important;
+  padding: 0 !important;
+  left: 0 !important;
+}
 
-  .bpx-player-ctrl-time-label {
-    text-align: center !important;
-    text-indent: 0 !important;
-  }
+.bpx-player-ctrl-time-label {
+  text-align: center !important;
+  text-indent: 0 !important;
+}
 
-  /* 弹幕发送框区域 */
-  .bpx-player-sending-bar {
-    background-color: transparent !important;
-    max-width: 90% !important;
-  }
+/* 弹幕发送框区域 */
+.bpx-player-sending-bar {
+  background-color: transparent !important;
+  max-width: 90% !important;
+}
 
-  .bpx-player-video-inputbar {
-    max-width: initial !important;
-  }
+.bpx-player-video-inputbar {
+  max-width: initial !important;
+}
 
-  .bpx-player-video-inputbar-wrap {
-    width: auto;
-  }
+.bpx-player-video-inputbar-wrap {
+  width: auto;
 }
